# batotp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  compile.sh  time_optimal_trajectory_planning.pro  time_optimal_trajectory_planning.sln
batotp/: CMakeLists.txt  ba.cpp  ba.h  batotp.pro  batotp.vcxproj  config.h  main.cpp  robot.cpp  robot.h  spline.cpp  spline.h  util.cpp  util.h
input/: GEN7DOFpathBasic.csv  README_for_config_file.txt
input/CSPR3DOF/: generatePathPointsCSPR.m
input/GEN7DOF/: generateGEN7DOFpath.m  generateGEN7DOFpathBasic.m
input/KUKA-LWR-IV/: convKuka.m
input/RR/: IDP_RR.m  generateRRlemniscatePath.m
input/UR5/: trajUR.csv
output/: output.pro  plotOutput.m
test/: CMakeLists.txt  main.cpp  test.pro  test.vcxproj
